# agent-CE

./: .dockerignore  .gitignore  ARCHITECTURE.md  AUTHORS.md  CONTRIBUTING.md  Dockerfile.base  ENV_VARIABLES.md  LICENSE  README.md  entrypoint.sh  neurosim-docker.sh
.github/actions/firestore-data/: action.yml
.github/workflows/: browser_use-image-updated.yaml  docker-build.yml  notte-image-updated.yml
AnthropicEvaluation/: Dockerfile  Makefile  README.md  entry.sh  llm.py  main.py  requirements.txt
BrowseruseEvaluation/: Dockerfile  Makefile  entry.sh  llm.py  main.py  start.sh
CE/: Dockerfile.browser_use  Dockerfile.notte
NotteEvaluation/: Dockerfile  Makefile  entry.sh  llm.py  main.py  notte_config.toml  pyproject.toml  start.sh
OpenaiEvaluation/: Dockerfile  Makefile  README.md  __init__.py  actions_playwright.py  entry.sh  keys.py  llm.py  loop.py  main.py  plan.md  prompt.py  request.py  requirements.txt  status.md  storage.py  urls.py
